--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   "homepage": "https://github.com/therealbenpai/zdcors#readme",
   "dependencies": {
     "@therealbenpai/zdcors": "^1.3.0",
-    "@types/express": "^4.17.21"
+    "@types/express": "^4.17.21",
+    "chalk": "^3.0.0",
+    "response-time": "^2.3.2"
   }
 }
